--- a/project_docs/com/soen/riskgame/module/dashboard/DashboardView.html
+++ b/project_docs/com/soen/riskgame/module/dashboard/DashboardView.html
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li><a href="../core/base/BaseView.html" title="class in com.soen.riskgame.module.core.base">com.soen.riskgame.module.core.base.BaseView</a></li>
 <li>
 <ul class="inheritance">
-<li>com.soen.riskgame.module.dashboard.DashboardView</li>
+<li>com.soen.riskgame.module.dashboard.DashboardController</li>
 </ul>
 </li>
 </ul>
